# Personal-Assistant_poetry

./: README.md  pyproject.toml
personal_assistant/: menu.py  phone_bot.py
