[tool.poetry]
name = "personal-assistant"
version = "0.1.0"
description = ""
authors = ["Artur Mistiuk <mistiuk.artur@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "personal_assistant"}]

[tool.poetry.dependencies]
python = "^3.11"
prettytable = "^3.6.0"
prompt-toolkit = "^3.0.38"
requests = "^2.28.2"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
